--- a/.github/workflows/main_webapp-dctf.yml
+++ b/.github/workflows/main_webapp-dctf.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./app
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./app/build     # the upload-artifact action does not use the working-directory setting
 
   deploy:
     runs-on: ubuntu-latest
