--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,10 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-bootstrap": "^2.1.2",
+    "react-countdown": "^2.3.2",
     "react-datetime-picker": "^3.5.0",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-simplemde-editor": "^5.0.2",
     "redux-persist": "^6.0.0"
