--- a/app/package.json
+++ b/app/package.json
@@ -7,15 +7,18 @@
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
     "@reduxjs/toolkit": "^1.7.2",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
     "react-bootstrap": "^2.1.2",
     "react-countdown": "^2.3.2",
     "react-datetime-picker": "^3.5.0",
+    "react-dom": "^16.11.0",
+    "react-i18next": "^11.15.4",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-scripts": "3.2.0",
     "react-simplemde-editor": "^5.0.2",
     "redux-persist": "^6.0.0"
   },
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web3-utils": "^1.7.0"
   }
 }
