--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,13 @@
     "@drizzle/react-components": "^1.5.1",
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.7.2",
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.1.3",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "react": "^16.11.0",
