--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "react": "^16.11.0",
